node basic monitoring
